logs/Slang/generated/hdlconv/hdlconvertor_p143.sv.log
name: hdlconvertor_p143
description: Tests imported from hdlconv
files: /home/travis/build/SymbiFlow/sv-tests/third_party/tests/hdlconvertor/tests/sv_test/std2017/p143.sv
should_fail: 0
tags: hdlconv
incdirs: 
top_module: 
rc: 1

../../home/travis/build/SymbiFlow/sv-tests/third_party/tests/hdlconvertor/tests/sv_test/std2017/p143.sv:1:9: error: language feature not yet supported
typedef union tagged {
        ^~~~~~~~~~~~~~
../../home/travis/build/SymbiFlow/sv-tests/third_party/tests/hdlconvertor/tests/sv_test/std2017/p143.sv:6:9: error: language feature not yet supported
typedef union tagged {
        ^~~~~~~~~~~~~~
